# api-Rust

./: .env  Cargo.toml
Bruno/ApiRust/: acceuil api.bru  bruno.json  modif sous-tache.bru  test.bru
Bruno/ApiRust/Personnes/: ajout valeur test.bru  ajouter une personne.bru  folder.bru  get liste personnes.bru  get une personne.bru  modif une personne.bru  supprimer une personne.bru
Bruno/ApiRust/equipe/: ajout valeur de test.bru  ajouter une equipe.bru  folder.bru  get liste equipe.bru  get un equipe.bru  modif equipe.bru  supprimer une equipe.bru
Bruno/ApiRust/projets/: ajout projets.bru  delete un projet.bru  folder.bru  get one projet.bru  list projet.bru  modif projet.bru
Bruno/ApiRust/soustaches/: create sous-tache.bru  delete sous-tache.bru  folder.bru  get one sous tache.bru  list sous tache.bru
Bruno/ApiRust/taches/: ajouter une tache.bru  folder.bru  (+4 more)
database/: diagramme sql.drawio
dev/: databasesCreation.sql  liste route nessesaire.docx  route nessesaire.docx  structure de projets.docx  ~$ructure de projets.docx  ~$ste route nessesaire.docx  ~$ute nessesaire.docx
src/: Route.rs  main.rs
src/Models/: equipe.model.rs  equipe_model.rs  mod.rs  personne_model.rs  projets.model.rs  projets_model.rs  soustaches_model.rs  taches_model.rs
src/Schema/: equipe.schema.rs  equipe_schema.rs  mod.rs  personne_schema.rs  projets.schema.rs  projets_schema.rs  soustaches_schema.rs  taches_schema.rs
src/config/: db.rs
src/handler/: appState.rs  equipe_handler.rs  mod.rs  personne_handler.rs  projets_handler.rs  soustaches_handler.rs  taches_handler.rs
