[package]
name = "ApiRust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
chrono = "0.4.42"
dotenvy = "0.15.7"
log = "0.4.28"
postgres = "0.19.10"
pretty_env_logger = "0.5.0"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres"] }
tokio = { version = "1.47.1", features = ["full"] }
warp = "0.4.2"
